# NASA-SPACE-APPS_The-Merge-Conflicts

./: LICENSE  README.md  index.html
NASA-SpaceApps/: CMakeLists.txt  main.cpp  utilities.cpp  utilities.h
NASA-SpaceApps/public/: index.html
WebServer/: Dockerfile  README  main.cpp  utilities.cpp  utilities.h  vcpkg.json
WebServer/public/: index.html
openspace/: README.md  asteroid_file_generator.py  pha_asteroids.profile
openspace/openspace_files/: pha_asteroids.profile
openspace/openspace_files/pha_asteroids/: 2010_PK9.asset  2010_PK9.csv  Apollo.asset  Apollo.csv  Icarus.asset  Icarus.csv
openspace/pha_asteroids/: 2010_PK9.asset
